Create .dotenv, MVC architecture, static server

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -14,7 +14,7 @@
     <header class="header">
         <a class="header__link" href="/" class="link">
             <p class="header__text">
-                Holis!!!
+                Final exercise
             </p>
         </a>
         <a class="header__link" href="https://adalab.es/bootcamp-programacion/" target="_blank" rel="noreferrer">
@@ -22,10 +22,17 @@
         </a>
     </header>
     <main class="main">
-        <h3 class="preview__title">Detail Page</h3>
+        <h3 class="title_rec">
+            <%= nombre %>
+        </h3>
         <p class="title">
-            <!--     Esto sería el parámetro correspondiente, por ejemplo, el nombre de la columna,columB_name2        
-            <%= columB_name2 %> -->
+            <img class="header__logo" src="/salad.jpeg" alt="logo Adalab" />
+        <p class="text_ing">
+            <%= ingredientes %>
+        </p>
+        <p class="text">
+            <%= instrucciones %>
+        </p>
         </p>
 
     </main>
